<resources>
    <string name="app_name">Dziennik Przedszkolaka</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_not_the_same_password">This password is not identical</string>
    <string name="error_incorrect_login">Login does not exist</string>
    <string name="error_null_login">Login is empty</string>
    <string name="error_the_same_login">Login is not available</string>
    <string name="error_password_too_short">Password must have at least 2 characters</string>
    <string name="error_string_is_null">This field cannot be empty</string>
    <string name="error_incorrect_day">Wrong day number</string>
    <string name="error_incorrect_month">Wrong month number</string>
    <string name="error_incorrect_year">Wrong year number</string>
    <string name="Zmień_Język">Zmień język</string>
    <string name="log_in">Log in</string>
    <string name="create_new_preschool">Create new preschool</string>
    <string name="create_announcement">Create announcement</string>
    <string name="content_s">Content*</string>
    <string name="add_announcement">Add announcement</string>
    <string name="name">Name</string>
    <string name="choose_image">Choose Image</string>
    <string name="list_of_children_s_work">List of children\'s work</string>
    <string name="add">Add</string>
    <string name="adding_new_date">Adding new date</string>
    <string name="name_of_child_s">Name of child*</string>
    <string name="day_s">Day*</string>
    <string name="number_of_month_s">Number of month*</string>
    <string name="year_s">Year*</string>
    <string name="add_date">Add date</string>
    <string name="creating_new_guide">Creating new guide</string>
    <string name="title_s">Title*</string>
    <string name="description">Description</string>
    <string name="link">Link</string>
    <string name="create_guide">Create guide</string>
    <string name="message_to_teacher">Message to teacher</string>
    <string name="content_of_message_s">Content of message*</string>
    <string name="send_message">Send message</string>
    <string name="add_payment">Add payment</string>
    <string name="description_s">Description*</string>
    <string name="amount_s">Amount*</string>
    <string name="creating_payment">Creating payment</string>
    <string name="add_date_of_birth">Add date of birth</string>
    <string name="view_calendar">View calendar</string>
    <string name="creating_parent">Creating parent</string>
    <string name="login_s">Login*</string>
    <string name="password_s">Password*</string>
    <string name="confirm_password_s">Confirm password*</string>
    <string name="create_parent">Create parent</string>
    <string name="creating_preschool">Creating preschool</string>
    <string name="name_of_the_preschool_s">Name of the preschool*</string>
    <string name="address_of_the_preschool">Address of the preschool</string>
    <string name="phone_number">Phone number</string>
    <string name="opening_hours">Opening hours</string>
    <string name="register">Register</string>
    <string name="creating_preschool_group">Creating preschool group</string>
    <string name="name_of_the_preschool_group_s">Name of the preschool group*</string>
    <string name="create_group">Create group</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thurstday</string>
    <string name="friday">Friday</string>
    <string name="create_schedule">Create schedule</string>
    <string name="creating_teacher">Creating teacher</string>
    <string name="name_and_surname_of_the_teacher_s">Name and surname of the teacher*</string>
    <string name="edit_guide">Edit guide</string>
    <string name="edit_information">Edit information</string>
    <string name="login_s_d">Login*:</string>
    <string name="name_and_surname_of_child_s">Name and surname of child*</string>
    <string name="edit">Edit</string>
    <string name="name_and_surname_s">Name and surname*</string>
    <string name="name_s">Name*</string>
    <string name="address">Address</string>
    <string name="edit_schedule">Edit schedule</string>
    <string name="guides">Guides</string>
    <string name="show_guides">Show guides</string>
    <string name="add_guide">Add guide</string>
    <string name="delete_guide">Delete guide</string>
    <string name="list_of_teachers">List of teachers</string>
    <string name="announcements">Announcements</string>
    <string name="payments">Payments</string>
    <string name="food_menu">Food menu</string>
    <string name="schedule">Schedule</string>
    <string name="guidebook">Guidebook</string>
    <string name="preschool_details">Preschool details</string>
    <string name="parent_s_notes">Parent\'s notes</string>
    <string name="list_of_notes">List of notes</string>
    <string name="preschool_menu">Preschool menu</string>
    <string name="create_teacher_s_account">Create teacher\'s account</string>
    <string name="delete_teacher_s_account">Delete teacher\'s account</string>
    <string name="add_food_menu">Add food menu</string>
    <string name="view_list_of_teachers">View list of teachers</string>
    <string name="edit_teacher_s_account">Edit teacher\'s account</string>
    <string name="preschool_s_information">Preschool\'s information</string>
    <string name="view_schedule">View schedule</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="teacher_menu">Teacher menu</string>
    <string name="group_details">Group details</string>
    <string name="add_child_s_work">Add child\'s work</string>
    <string name="create_preschool_group">Create preschool group</string>
    <string name="delete_preschool_group">Delete preschool group</string>
    <string name="calendar">Calendar</string>
    <string name="new_name_of_preschool_group_s">New name of preeschool group*</string>
    <string name="view_parents">View parents</string>
    <string name="view_announcements">View announcements</string>
    <string name="change_payment_status">Change payment status</string>
    <string name="add_payment_in_whole_group">Add payment in whole group</string>
    <string name="view_payment">View payment</string>
    <string name="add_parent">Add parent</string>
    <string name="edit_parent">Edit parent</string>
    <string name="delete_parent">Delete parent</string>
    <string name="guide">Guide</string>
    <string name="title">Title</string>
    <string name="open_link">Open link</string>
    <string name="list_of_children">List of children</string>
    <string name="payment">Payment</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="message_sent">Message sent</string>
    <string name="message_not_sent">Message NOT sent</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="guide_created">Guide created</string>
    <string name="guide_not_created">Guide NOT created</string>
    <string name="account_created">Account created</string>
    <string name="account_not_created">Account NOT created</string>
    <string name="announcement_created">Announcement created</string>
    <string name="announcement_not_created">Announcement NOT created</string>
    <string name="you_dont_have_permission_to_access_a_file_location">You don\'t have permission to access a file location</string>
    <string name="date_added">Date added</string>
    <string name="date_not_added">Date NOT added</string>
    <string name="payment_created">Payment created</string>
    <string name="payment_not_created">Payment NOT created</string>
    <string name="status_changed_to_paid">Status changed to PAID</string>
    <string name="status_changed_to_not_paid">Status changed to NOT PAID</string>
    <string name="preschool_group_created">Preschool group created</string>
    <string name="preschool_group_not_created">Preschool group NOT created</string>
    <string name="schedule_created">Schedule created</string>
    <string name="schedule_not_created">Schedule NOT created</string>
    <string name="schedule_edited">Schedule edited</string>
    <string name="schedule_not_edited">Schedule NOT edited</string>
    <string name="schedule_doesn_t_exist">Schedule doesn\'t exist</string>
    <string name="schedule_already_exists">Schedule already exists</string>
    <string name="no_schedule_to_edit">No schedule to edit!</string>
    <string name="preschool_group_doesn_t_exist">Preschool group doesn\'t exist</string>
    <string name="preschool_group_already_exists">Preschool group already exists. Delete it first.</string>
    <string name="preschool_group_deleted">Preschool group deleted</string>
    <string name="preschool_group_not_deleted">Preschool group NOT deleted</string>
    <string name="no_preschool_group_to_delete">No preschool group to delete</string>
    <string name="parent_deleted">Parent deleted</string>
    <string name="parent_not_deleted">Parent NOT deleted</string>
    <string name="url_is_invalid">URL is invalid</string>
    <string name="no_link_to_this_guide">No link to this guide</string>
    <string name="children_s_works">Children\'s works</string>
    <string name="added_successfully">Added successfully!</string>
    <string name="children_works_list">Children\'s works list</string>
    <string name="name_of_child">Name of child</string>
    <string name="no_food_menu">There is no food menu</string>
    <string name="error_password_too_short2">Password must have at least 5 characters</string>
    <string name="choose_teacher">Choose teacher</string>
    <string name="guide_edited">Guide edited</string>
    <string name="guide_not_edited">Guide NOT edited</string>
    <string name="choose_guide_to_show">Choose guide to show</string>
    <string name="choose_guide_to_edit">Choose guide to edit</string>
    <string name="choose_guide_to_delete">Choose guide to delete</string>
    <string name="choose_guide">Choose guide</string>
    <string name="teacher_deleted">Teacher deleted</string>
    <string name="teacher_not_deleted">Teacher NOT deleted</string>
    <string name="choose_payment">Choose payment</string>
    <string name="choose_parent">Choose parent</string>
    <string name="parent_menu">Parent menu</string>
    <string name="paid">PAID</string>
    <string name="not_paid">NOT PAID</string>
</resources>
