<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8DFF5"
    tools:context="com.weteam.weteam.dziennikprzedszkolaka.parent.ParentMenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="horizontal"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/parent_menu"
                android:textSize="36sp"
                />

            <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="editInformation"
                android:text="@string/edit_information"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/viewAnnouncements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="viewAnnouncements"
                android:text="@string/announcements"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/viewPayments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="viewPayments"
                android:text="@string/payments"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />



            <Button
                android:id="@+id/viewFoodMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="viewFoodMenu"
                android:text="@string/food_menu"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/viewSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="viewSchedule"
                android:text="@string/schedule"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/guidebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="guidebook"
                android:text="@string/guidebook"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/viewPreschool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="viewPreschoolDetails"
                android:text="@string/preschool_details"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/parentNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="addParentNote"
                android:text="@string/parent_s_notes"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/showChildrenGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#0090ff"
                android:fontFamily="casual"
                android:onClick="showGallery"
                android:text="@string/children_s_works"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
