<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weteam.weteam.dziennikprzedszkolaka.preschool.PreschoolMenuActivity"
    android:background="#A8DFF5">




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout1">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/preschool_menu"
            android:textSize="36sp"
            android:layout_marginBottom="100dp"
            />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_weight="1"
        android:scrollbars="horizontal"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            >

            <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/edit_information"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="editInformation"
                android:background="#0090ff"
                android:textColor="#FFFFFF"
                />


            <Button
            android:id="@+id/createTeacher"
                android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/create_teacher_s_account"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="createTeacher"
                android:background="#0090ff"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/deleteTeacher"
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/delete_teacher_s_account"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="deleteTeacher"
                android:background="#0090ff"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/addMenu"
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/food_menu"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="addMenu"
                android:background="#0090ff"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/viewTeachers"
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/view_list_of_teachers"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="viewTeachers"
                android:background="#0090ff"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/guides"
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/guides"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="goToGuides"
                android:background="#0090ff"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/editTeacher"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/edit_teacher_s_account"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="chooseEditTeacher"
                android:background="#0090ff"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
